faucet design improvements

--- a/frontend/src/styles/app.styl
+++ b/frontend/src/styles/app.styl
@@ -12,7 +12,7 @@ reset-html5()
   box-sizing border-box
 
 html, body, #app
-  background var(--app-bg)
+  background var(--app-fg)
 
 a
   color var(--link)
