design updates, add gaia-tardigrade

--- a/frontend/src/styles/app.styl
+++ b/frontend/src/styles/app.styl
@@ -13,6 +13,8 @@ reset-html5()
 
 html, body, #app
   background var(--app-fg)
+  width 100%
+  width 100vw
 
 a
   color var(--link)
@@ -24,6 +26,7 @@ a
 #app
   df()
   color var(--txt)
+  padding-top 3rem
 
 .ni-field
   border-radius 2px!important
